mdapipkg/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Int_Arts_and_Entertainment__c</fullName>
        <label>Arts and Entertainment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antiques</fullName>
                </value>
                <value>
                    <fullName>Art Collecting</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Communications_Preferences__c</fullName>
        <label>Communications Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Points</fullName>
                </value>
                <value>
                    <fullName>Business Events</fullName>
                </value>
                <value>
                    <fullName>Chapter Leadership Workshops</fullName>
                </value>
                <value>
                    <fullName>Communications related to Social Media</fullName>
                </value>
                <value>
                    <fullName>Event Opportunities eNewsletter</fullName>
                </value>
                <value>
                    <fullName>Family Events (spouse/partner, children and YNG+)</fullName>
                </value>
                <value>
                    <fullName>Family News</fullName>
                </value>
                <value>
                    <fullName>Forum News</fullName>
                </value>
                <value>
                    <fullName>Global Leadership Conference (GLC)</fullName>
                </value>
                <value>
                    <fullName>Global Networking Summit</fullName>
                </value>
                <value>
                    <fullName>Ignite eNewsletter</fullName>
                </value>
                <value>
                    <fullName>Innovation Week</fullName>
                </value>
                <value>
                    <fullName>Personal Events</fullName>
                </value>
                <value>
                    <fullName>Regional Events</fullName>
                </value>
                <value>
                    <fullName>Regional news</fullName>
                </value>
                <value>
                    <fullName>Social Engagement Events</fullName>
                </value>
                <value>
                    <fullName>Universities</fullName>
                </value>
                <value>
                    <fullName>YPO Digest</fullName>
                </value>
                <value>
                    <fullName>YPO EDGE</fullName>
                </value>
                <value>
                    <fullName>YPO Global Pulse</fullName>
                </value>
                <value>
                    <fullName>YPO News and Information</fullName>
                    <default>true</default>
                    <label>YPO News and Information</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Community_Service__c</fullName>
        <label>Community Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts &amp; Culture</fullName>
                </value>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Crime Prevention</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Humanitarian Activities</fullName>
                </value>
                <value>
                    <fullName>Inner City or Community</fullName>
                </value>
                <value>
                    <fullName>Museum</fullName>
                </value>
                <value>
                    <fullName>Religion and Spirituality</fullName>
                </value>
                <value>
                    <fullName>Senior Services</fullName>
                </value>
                <value>
                    <fullName>Veterans</fullName>
                </value>
                <value>
                    <fullName>Youth Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_General__c</fullName>
        <label>General</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Cigars</fullName>
                </value>
                <value>
                    <fullName>Collecting Wines</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Fine Dining</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Investing</fullName>
                </value>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Politics</fullName>
                </value>
                <value>
                    <fullName>Writing/Authorship</fullName>
                </value>
                <value>
                    <fullName>Yachting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Health__c</fullName>
        <label>Health</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fitness</fullName>
                </value>
                <value>
                    <fullName>Preventive Medicine</fullName>
                </value>
                <value>
                    <fullName>Stress Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Learning_More__c</fullName>
        <label>Learning More</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doing Business In China</fullName>
                </value>
                <value>
                    <fullName>Going into Public Service</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Exercise</fullName>
                </value>
                <value>
                    <fullName>Issues in Family Business</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Options for Your Next Career Move</fullName>
                </value>
                <value>
                    <fullName>Organizing for Community Change</fullName>
                </value>
                <value>
                    <fullName>Personal Investing</fullName>
                </value>
                <value>
                    <fullName>Serving on Corp. Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Lifestyle__c</fullName>
        <label>Lifestyle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charities/Philanthropy</fullName>
                </value>
                <value>
                    <fullName>Community/Public Service</fullName>
                </value>
                <value>
                    <fullName>Environmental Preservation</fullName>
                </value>
                <value>
                    <fullName>Sustainable Development</fullName>
                </value>
                <value>
                    <fullName>Wildlife &amp; Habitat Preservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Outdoor__c</fullName>
        <label>Outdoor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>Climbing</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Hiking</fullName>
                </value>
                <value>
                    <fullName>Horses/Equestrian</fullName>
                </value>
                <value>
                    <fullName>Hunting</fullName>
                </value>
                <value>
                    <fullName>Kayaking</fullName>
                </value>
                <value>
                    <fullName>Motorcycles</fullName>
                </value>
                <value>
                    <fullName>Sailing</fullName>
                </value>
                <value>
                    <fullName>Scuba</fullName>
                </value>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Triathlon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Sports__c</fullName>
        <label>Sports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bicycling</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Ice Hockey</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Surfing</fullName>
                </value>
                <value>
                    <fullName>Swimming</fullName>
                </value>
                <value>
                    <fullName>Tennis</fullName>
                </value>
                <value>
                    <fullName>Water Skiing</fullName>
                </value>
                <value>
                    <fullName>Windsurfing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Team_Sports__c</fullName>
        <label>Team Sports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Football</fullName>
                </value>
                <value>
                    <fullName>Football</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Int_Travel__c</fullName>
        <label>Travel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adventure Travel</fullName>
                </value>
                <value>
                    <fullName>Archeological/Historical</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Epicurean</fullName>
                </value>
                <value>
                    <fullName>Extreme Travel</fullName>
                </value>
                <value>
                    <fullName>Family Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Count__c</fullName>
        <description>Used in profile complete formula to ensure there is an interest created</description>
        <label>Interest Count</label>
        <summaryFilterItems>
            <field>Interest__c.Type__c</field>
            <operation>equals</operation>
            <value>Interest</value>
        </summaryFilterItems>
        <summaryForeignKey>Interest__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interested_in_Lifetime_Member_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag designates if a contact has selected the &quot;Contact Me&quot; button on the Lifetime Option page within the Renewals application, indicating an MTM needs to contact the member.</description>
        <label>Interested in Lifetime Member Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Introduced_to_YPOI_Via__c</fullName>
        <label>Introduced to YPOI Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online News</fullName>
                </value>
                <value>
                    <fullName>Traditional Media</fullName>
                </value>
                <value>
                    <fullName>Web Search</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>YPO Member</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>YPO Gold Member</fullName>
                </value>
                <value>
                    <fullName>Child of YPO/YPO Gold Member</fullName>
                </value>
                <value>
                    <fullName>WPO Member</fullName>
                </value>
                <value>
                    <fullName>Child of YPO/WPO Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAtRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Risk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGrandfather__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grandfather?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Address1_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address1 Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Address1_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address1 Private?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Address2_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address2 Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Address2_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address2 Private?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Child_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This person has a parent who is also a YPO/YPO GOld member</inlineHelpText>
        <label>Child Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contractor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Department_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Department Admin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Executive_Assistant_Show_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Executive Assistant Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Grace_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grace Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Grandfather__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Grandfather? Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Honorary_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Honorary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Interested_in_a_YPO_Internship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in a YPO Internship?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_M2MX_Request_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This signifies at least one request for help email has been sent to this contact by the M2MX team</inlineHelpText>
        <label>M2MX Request Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Member_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the new member been published to the wider community.</description>
        <label>New Member Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Other_Address_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Address Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Show_Assistant_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should assistant information be displayed in portal?</inlineHelpText>
        <label>Show Assistant Information?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Show_Asst_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Asst. Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Spouse_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This person is a spouse member</inlineHelpText>
        <label>Spouse Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Surviving_Spouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surviving Spouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Waiver_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver Used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Welcome_Gift_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Gift Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_YPO_Fees_Late__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This should be checked if YPO Fees for the current year are late.</inlineHelpText>
        <label>YPO Fees Late</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Join_Date__c</fullName>
        <description>For functional Purpose</description>
        <label>Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ECommerceEmail__c</fullName>
        <label>E-Commerce Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ECommercePhone__c</fullName>
        <label>E-Commerce Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ExternalCustomerId__c</fullName>
        <description>The Id from an external gateway that has stored payment information for this Contact. This field will be set automatically when Encore or Venue creates the external customer record.</description>
        <label>External Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsPendingCheckoutCompletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this Venue created Contact has not yet completed checkout.</description>
        <inlineHelpText>If true, this Venue created Contact has not yet completed checkout.</inlineHelpText>
        <label>Pending Checkout Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Grace_Year_with_Next_Fiscal_Year__c</fullName>
        <description>This will calculate the difference between last grace year used year and next fiscal year</description>
        <formula>IF(MONTH(TODAY())&lt;=6, YEAR(TODAY())-YEAR( Date_Last_Grace_Year_Used__c ), (YEAR(TODAY()) + 1)-YEAR( Date_Last_Grace_Year_Used__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Grace Year with Next Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Renewals_Form__c</fullName>
        <description>Capture Renewals form relative URL the member last viewed</description>
        <label>Last Renewals Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Renewals_Page__c</fullName>
        <description>The page url of the last page which redirects to more than one pages</description>
        <label>Last Renewals Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Training_Date__c</fullName>
        <description>FOR FUNCTIONAL PURPOSE</description>
        <label>Last Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Qualification_Information__c</fullName>
        <label>Lead Qualification Information</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Other__c</fullName>
        <label>Lead Source Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Dues_Status__c</fullName>
        <label>Lifetime Dues Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Payment Cycle</fullName>
                </value>
                <value>
                    <fullName>Completed Payment Cycle</fullName>
                </value>
                <value>
                    <fullName>Eligible for Lifetime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MSN__c</fullName>
        <label>MSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Team_Since__c</fullName>
        <label>Management Team Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Management_Team_Title__c</fullName>
        <label>Management Team Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Segment__c</fullName>
        <formula>IF( Segmentation_Sum__c = -64.29617,&quot;S0&quot;,
	IF(Segmentation_Sum__c = 0,&quot;&quot;,
		IF(Max(S1__c, S2__c, S3__c, S4__c, S5__c, S6__c) = S1__c, &quot;S1&quot;,
			IF(Max(S1__c, S2__c, S3__c, S4__c, S5__c, S6__c) = S2__c, &quot;S2&quot;,
				IF(Max(S1__c, S2__c, S3__c, S4__c, S5__c, S6__c) = S3__c, &quot;S3&quot;,
					IF(Max(S1__c, S2__c, S3__c, S4__c, S5__c, S6__c) = S4__c, &quot;S4&quot;,
						IF(Max(S1__c, S2__c, S3__c, S4__c, S5__c, S6__c) = S5__c, &quot;S5&quot;,&quot;S6&quot;
							)
						)
					)
				)
			)
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Forum_Status__c</fullName>
        <label>Member Forum Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending Placement</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                    <isActive>false</isActive>
                    <label>Denied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Tier__c</fullName>
        <formula>If(
TEXT( Tier_Number__c) &lt;&gt;&apos;&apos;, 
TEXT(Tier_Number__c),

IF(
Floor(
(Tenure_FY17_c__c)
) &lt;12, &apos;1&apos;,
If(
AND(
Floor(Tenure_FY17_c__c)    
    &gt;=12,
Age_Next_Fiscal_Year__c &lt; 65
), &apos;2&apos;,
IF(
AND(Age_Next_Fiscal_Year__c &gt;= 65, Age_Next_Fiscal_Year__c &lt; 75), &apos;3&apos;,
IF(Age_Next_Fiscal_Year__c &gt;= 75,
&apos;4&apos;,&apos;&apos;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <label>Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Surviving Spouse</fullName>
                </value>
                <value>
                    <fullName>Honorary Member</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Surviving Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Pending Resignation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Tenure__c</fullName>
        <formula>IF(Number_Years_a_Member__c&lt;3, &apos;0-2 Years&apos;,  IF(Number_Years_a_Member__c&lt;6, &apos;3-5 Years&apos;,  IF(Number_Years_a_Member__c&lt;9, &apos;6-8 Years&apos;, &apos;9+ Years&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Tenure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Country_Code__c</fullName>
        <label>Mobile Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiSelectPicklists_Text__c</fullName>
        <label>MultiSelectPicklists(Text)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nanny__c</fullName>
        <label>Nanny</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_M2MX_Skillsets__c</fullName>
        <inlineHelpText>Count of M2MX skillsets - used in Chapter Health Metrics</inlineHelpText>
        <label>Number M2MX Skillsets</label>
        <summaryForeignKey>M2MX_Skillsets__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Third_Party_Certifications__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This will add the number of Third Party Certifications as a member. When it reaches 4, the third party flow should not allow Third Party Certification to be set again.</description>
        <label>#Third Party Certifications</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Waivers__c</fullName>
        <description>Is part of workflow to update Waiver used in initial qualifying data.</description>
        <label># Waivers</label>
        <summaryFilterItems>
            <field>Exception__c.Exception_Category__c</field>
            <operation>equals</operation>
            <value>Waiver</value>
        </summaryFilterItems>
        <summaryForeignKey>Exception__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Years_a_Member__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used in the flow calculating grace accrual. The first partial fiscal year counts towards the three years.</description>
        <label># Years a Member</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees1__c</fullName>
        <inlineHelpText>Declaration of employees managed at time of lead conversion</inlineHelpText>
        <label>Number of Employees (directly supervise)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees (opt 1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_opt_2__c</fullName>
        <label>Number of Employees (opt 2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Primary_Chapters__c</fullName>
        <label>Number of Primary Chapters</label>
        <summaryFilterItems>
            <field>Account_Affiliation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Chapter</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Affiliation__c.Is_Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Affiliation__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Affiliation__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Relationship_record__c</fullName>
        <label>Number of Relationship record</label>
        <summaryForeignKey>Relationship__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Closed_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Closed Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Title__c</fullName>
        <inlineHelpText>Title at time of lead conversion</inlineHelpText>
        <label>Original Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Chairman of the Board</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Managing Director</fullName>
                </value>
                <value>
                    <fullName>Managing Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Interest_1__c</fullName>
        <label>Other Interest 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>